WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178360
ImageDecoderAVFObjC fails to create more CMSampleBuffers after creating about 32MB worth.
https://bugs.webkit.org/show_bug.cgi?id=178360
Summary
ImageDecoderAVFObjC fails to create more CMSampleBuffers after creating about...
Jer Noble
Reported
2017-10-16 13:46:36 PDT
ImageDecoderAVFObjC fails to create more CMSampleBuffers after creating about 32MB worth.
Attachments
Patch
(9.21 KB, patch)
2017-10-16 13:51 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(9.25 KB, patch)
2017-10-16 16:55 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2017-10-16 13:51:38 PDT
Created
attachment 323938
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2017-10-16 16:37:40 PDT
<
rdar://problem/35018552
>
WebKit Commit Bot
Comment 3
2017-10-16 16:39:27 PDT
Comment on
attachment 323938
[details]
Patch Rejecting
attachment 323938
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 323938, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://webkit-queues.webkit.org/results/4875836
Jer Noble
Comment 4
2017-10-16 16:55:08 PDT
Created
attachment 323957
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2017-10-16 17:35:15 PDT
Comment on
attachment 323957
[details]
Patch for landing Clearing flags on attachment: 323957 Committed
r223452
: <
https://trac.webkit.org/changeset/223452
>
WebKit Commit Bot
Comment 6
2017-10-16 17:35:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug